--- a/package.json
+++ b/package.json
@@ -9,12 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "next": "12.2.5",
+    "query-string": "^7.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swr": "^1.3.0",
+    "react-bootstrap": "^2.5.0",
+    "http-proxy": "^1.18.1",
+    "cookies": "^0.8.0"
+
+
   },
   "devDependencies": {
+    "@types/cookies": "^0.7.7",
+    "@types/http-proxy": "^1.17.9",
     "eslint": "8.23.0",
-    "eslint-config-next": "12.2.5"
+    "eslint-config-next": "12.2.5",
+    "typescript": "4.7.4"
   }
 }
